--- a/harenecPoll/css/main.css
+++ b/harenecPoll/css/main.css
@@ -110,6 +110,15 @@ body {
     background-color: var(--webte-color-yellow);
 }
 
+.nav-item .nav-item-current {
+    color: var(--webte-color-yellow);
+}
+
+.nav-item-current:hover{
+    color: var(--webte-color-ltBlack);
+}
+
+
 .nav-item a {
     width: 100%;
     height: 100%;
