--- a/harenecPoll/css/myConsole.css
+++ b/harenecPoll/css/myConsole.css
@@ -10,6 +10,7 @@
     --webte-color-brown: #560d00;
     font-size: 10px;
 }
+/*PCIIC PICIC PICIC*/
 
 .collapse-set{
     margin: 10px;
@@ -40,6 +41,15 @@
     flex-wrap: wrap;
     justify-content: space-evenly; 
     align-items: center; 
+}
+
+
+.bigger-button-font{
+    font-size: 1.6rem;
+}
+
+.bigger-font{
+    font-size: 1.6rem;
 }
 
 .in-row-q i,
