--- a/harenecPoll/css/main.css
+++ b/harenecPoll/css/main.css
@@ -230,24 +230,7 @@ button:hover {
     color: red;
 }
 
-.modal {
-    top: 0;
-    left: 0;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    background-color: rgba(0, 0, 0, 0.8);
-}
 
-.modal img,
-.modal p {
-    padding: 2rem 5rem;
-}
-
-.modal img {
-    max-width: 50rem;
-}
 
 
 
@@ -411,9 +394,24 @@ button:hover {
 }
 
 .modal2 {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.modal2 img,
+.modal2 p {
+    padding: 2rem 5rem;
+}
+
+.modal2 img {
+    max-width: 50rem;
 }
 
 .info-modal {
