--- a/harenecPoll/css/main.css
+++ b/harenecPoll/css/main.css
@@ -543,7 +543,7 @@ button:hover {
     input[type=date],
     input[type=password],
     select {
-        width: 90%;
+        width: 100%;
     }
 
     input[type=submit],
@@ -595,4 +595,17 @@ li{
 
 .column{
     padding: 20px;
+}
+
+/* Jojo styly */
+
+#bigger-input-height{
+    height: 7rem;
+    font-size: 2.25rem;
+    text-align: center; 
+}
+
+.margin-y{
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
