--- a/harenecPoll/css/main.css
+++ b/harenecPoll/css/main.css
@@ -580,6 +580,25 @@ button:hover {
     margin-bottom: 10px;
 }
 
+.info-modal-password {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 50%;
+    max-width: 70rem;
+    background-color: var(--webte-color-dkGrey);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    z-index: 1000;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 li{
     font-size: 16px;
 }
