--- a/harenecPoll/css/main.css
+++ b/harenecPoll/css/main.css
@@ -225,6 +225,21 @@ button:hover {
     color: white;
 }
 
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+#dynamicList li {
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 20px;
+    background-color: var(--webte-color-yellow);
+    border: 4px solid white;
+    color: black;
+}
+
 .btn-compact {
     padding: .5rem 1.5rem;
     height: 5.5rem;
